# PoseTemplateCreator

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  SPEC.md  app.py  docker-compose.yml  main.py  pyproject.toml  template_creator.py  web_app.py
.github/workflows/: docker-publish.yml
.streamlit/: config.toml
assets/: styles.css
object_models/: HOPE_14.ply  HOPE_2.ply  HOPE_7.ply  ITODD_11.ply  ITODD_23.ply  ITODD_4.ply  ITODD_5.ply  REPRO_1.ply  REPRO_2.ply  REPRO_3.ply  REPRO_4.ply  REPRO_5.ply  REPRO_6.ply
