[project]
name = "posetemplatecreator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.6",
    "numpy>=2.3.5",
    "pillow>=12.0.0",
    "scipy>=1.16.3",
    "trimesh>=4.10.0",
    "streamlit>=1.28.0",
    "reportlab>=4.0.0",
    "matplotlib>=3.8.0",
]
